@@ -56,6 +56,7 @@ PHP                                                                        NEWS
   . Fixed bug #69280 (SoapClient classmap doesn't support fully qualified class
     name). (nielsdos)
   . Fixed bug #76232 (SoapClient Cookie Header Semicolon). (nielsdos)
+  . Fixed memory leaks when calling SoapFault::__construct() twice. (Girgias)
 
 - Sodium:
   . Fix memory leaks in ext/sodium on failure of some functions. (nielsdos)
